[tool.poetry]
name = "browser_automation"
version = "0.1.0"
description = ""
authors = ["suecannavlc <anna.sueca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
